Begin adding upstream branch presentation
