# Server/Api/Git/GitUpstreamDataController.cs
@@ -10,6 +10,19 @@ public class GitUpstreamDataController(IGitToolsInvoker GitToolsPowerShell) : Gi
 	protected override async Task<GetUpstreamDataActionResult> GetUpstreamData()
 	{
 		var results = await GitToolsPowerShell.RunCommand(new GitUpstreamData());
-		return GetUpstreamDataActionResult.Ok(results.ToDictionary(e => e.Key, e => e.Value.UpstreamBranchNames.Select(b => new Branch(Name: b))));
+		var noUpstreams = results.SelectMany(r => r.Value.UpstreamBranchNames).Except(results.Keys);
+		return GetUpstreamDataActionResult.Ok((
+			from kvp in results
+			select new UpstreamBranchConfiguration(
+				Name: kvp.Key,
+				Upstream: kvp.Value.UpstreamBranchNames.Select(n => new Branch(Name: n))
+			)
+		).Concat(
+			from branchName in noUpstreams
+			select new UpstreamBranchConfiguration(
+				Name: branchName,
+				Upstream: Enumerable.Empty<Branch>()
+			)
+		));
 	}
 }
